--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,10 @@ a {
     align-self: flex-end;
 }
 
+.hader{
+    
+}
+
 .header-menu-right-telephone-text {
     display: flex;
     flex-direction: column;
